# gendiff

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter-and-test-action.yaml
gendiff/: __init__.py  formats.py  generate_diff.py  parse_content.py  parsing.py
gendiff/formats/: get_formats.py  json.py  plain.py  stylish.py  unify_values.py
gendiff/scripts/: gendiff.py
tests/: __init__.py  expected.py  test_flat_json.py  test_flat_yaml.py  test_gendiff.py  test_json.py  test_plain.py  test_recursion_json.py  test_recursion_yaml.py  test_stylish.py
tests/fixtures/: expected_json_flat_json.txt  expected_json_rec_json.txt
